--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,82 +3,174 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+
+@inproceedings{SIGIR23_HAKG,
+  author       = {Xinjun Zhu and
+                  Yuntao Du and
+                  Lu Chen and
+                  Baihua Zheng and
+                  Yunjun Gao},
+  title        = {Knowledge-refined Denoising Network for Robust Recommendation},
+  booktitle    = {The 46th International {ACM} {SIGIR} Conference on Research
+                  and Development in Information Retrieval},
+  year         = {2023},
+  abbr         = {SIGIR}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+
+@article{TKDE23_Model,
+  author    = {Minjun Zhao and
+               Lu Chen and
+               Keyu Yang and
+               Yuntao Du and 
+               Yunjun Gao},
+  title     = {Finding Materialized Models for Model Reuse},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2023},
+  abbr      = {TKDE}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+
+@article{VLDB23_LDPTrace,
+  author       = {Yuntao Du and
+                  Yujia Hu and 
+                  Zhikun Zhang and
+                  Ziquan Fang and
+                  Lu Chen and
+                  Baihua Zheng and
+                  Yunjun Gao},
+  title        = {{LDPTrace:}: Locally Differentially Private Trajectory Synthesis},
+  journal      = {Proc. {VLDB} Endow.},
+  volume       = {16},
+  number       = {8},
+  pages        = {1897--1909},
+  year         = {2023},
+  abbr         = {VLDB},
+  selected     = {true},
+  preview      = {pub/VLDB23_LDPTrace.jpg}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+
+@inproceedings{WWW23_ECF,
+  author       = {Yuntao Du and
+                  Jianxun Lian and
+                  Jing Yao and
+                  Xiting Wang and
+                  Mingqi Wu and
+                  Lu Chen and
+                  Yunjun Gao and
+                  Xing Xie},
+  title        = {Towards Explainable Collaborative Filtering with Taste Clusters Learning},
+  booktitle    = {Proceedings of the {ACM} Web Conference 2023},
+  pages        = {3712--3722},
+  year         = {2023},
+  abbr         = {WWW},
+  selected     = {true},
+  preview      = {pub/WWW23-ECF.jpg}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+
+@inproceedings{ICDE23_FLBooster,
+  author       = {Zhihao Zeng and 
+                  Yuntao Du and 
+                  Ziquan Fang and 
+                  Lu Chen and 
+                  Shiliang Pu and 
+                  Guodong Chen and 
+                  Hui Wang and Yunjun Gao},
+  title        = {{FLBooster}: A Unified and Efficient Platform for Federated Learning Acceleration},
+  booktitle    = {39th {IEEE} International Conference on Data Engineering},
+  year         = {2023},
+  abbr         = {ICDE}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{KDD22_ST2Vec,
+  author       = {Ziquan Fang and
+                  Yuntao Du and
+                  Xinjun Zhu and
+                  Danlei Hu and
+                  Lu Chen and
+                  Yunjun Gao and
+                  Christian S. Jensen},
+  title        = {Spatio-Temporal Trajectory Similarity Learning in Road Networks},
+  booktitle    = {The 28th {ACM} {SIGKDD} Conference on Knowledge Discovery
+                  and Data Mining, Washington},
+  pages        = {347--356},
+  year         = {2022},
+  abbr         = {SIGKDD}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{SIGIR22_HAKG,
+  author       = {Yuntao Du and
+                  Xinjun Zhu and
+                  Lu Chen and
+                  Baihua Zheng and
+                  Yunjun Gao},
+  title        = {{HAKG:} Hierarchy-Aware Knowledge Gated Network for Recommendation},
+  booktitle    = {The 45th International {ACM} {SIGIR} Conference on Research
+                  and Development in Information Retrieval},
+  pages        = {1390--1400},
+  year         = {2022},
+  abbr         = {SIGIR},
+  selected     = {true},
+  preview      = {pub/SIGIR22_HAKG.jpg}
+}
+
+@inproceedings{SIGIR22_SGDL,
+  author       = {Yunjun Gao and
+                  Yuntao Du and
+                  Yujia Hu and
+                  Lu Chen and
+                  Xinjun Zhu and
+                  Ziquan Fang and
+                  Baihua Zheng},
+  title        = {Self-Guided Learning to Denoise for Robust Recommendation},
+  booktitle    = {The 45th International {ACM} {SIGIR} Conference on Research
+                  and Development in Information Retrieval},
+  pages        = {1412--1422},
+  year         = {2022},
+  abbr         = {SIGIR}
+}
+
+@article{TKDE22_MetaKG22,
+  author    = {Yuntao Du and
+               Xinjun Zhu and
+               Lu Chen and
+               Ziquan Fang and 
+               Yunjun Gao},
+  title     = {{MetaKG:}  Meta-learning on Knowledge Graph for Cold-start Recommendation},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2022},
+  abbr      = {TKDE}
+}
+
+@inproceedings{ICDE21_E2DTC,
+  author       = {Ziquan Fang and
+                  Yuntao Du and
+                  Lu Chen and
+                  Yujia Hu and
+                  Yunjun Gao and
+                  Gang Chen},
+  title        = {E$^2$DTC: An End to End Deep Trajectory Clustering Framework
+                  via Self-Training},
+  booktitle    = {37th {IEEE} International Conference on Data Engineering},
+  pages        = {696--707},
+  year         = {2021},
+  abbr         = {ICDE}
+}
+
+@article{VLDB21_MDTP,
+  author       = {Ziquan Fang and
+                  Lu Pan and
+                  Lu Chen and
+                  Yuntao Du and
+                  Yunjun Gao},
+  title        = {{MDTP:} {A} Multi-source Deep Traffic Prediction Framework over Spatio-Temporal
+                  Trajectory Data},
+  journal      = {Proc. {VLDB} Endow.},
+  volume       = {14},
+  number       = {8},
+  pages        = {1289--1297},
+  year         = {2021},
+  abbr         = {VLDB}
 }
