--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -61,7 +61,7 @@
                   Yunjun Gao and
                   Xing Xie},
   title        = {Towards Explainable Collaborative Filtering with Taste Clusters Learning},
-  booktitle    = {Proceedings of the {ACM} Web Conference 2023},
+  booktitle    = {Proceedings of the {ACM} Web Conference},
   pages        = {3712--3722},
   year         = {2023},
   abbr         = {WWW},
