--- a/_posts/2023_04_22_LDPTrace.md
+++ b/_posts/2023_04_22_LDPTrace.md
@@ -13,7 +13,7 @@ authors:
     affiliations:
       name: Zhejiang University
 
-bibliography: 2023_04_22.bib
+bibliography: 2023_04_22_LDPTrace.bib
 
 
 ---
