--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,7 +47,7 @@
   year         = {2023},
   abbr         = {VLDB},
   selected     = {true},
-  preview      = {pub/VLDB23_LDPTrace.jpg}
+  preview      = {VLDB23_LDPTrace.jpg}
 }
 
 
@@ -66,7 +66,7 @@
   year         = {2023},
   abbr         = {WWW},
   selected     = {true},
-  preview      = {pub/WWW23-ECF.jpg}
+  preview      = {WWW23-ECF.jpg}
 }
 
 
@@ -113,7 +113,7 @@
   year         = {2022},
   abbr         = {SIGIR},
   selected     = {true},
-  preview      = {pub/SIGIR22_HAKG.jpg}
+  preview      = {SIGIR22_HAKG.jpg}
 }
 
 @inproceedings{SIGIR22_SGDL,
