--- a/_posts/2023_04_22_LDPTrace.md
+++ b/_posts/2023_04_22_LDPTrace.md
@@ -2,7 +2,8 @@
 layout: distill
 title: Trajectory Synthesis with Local Differential Privacy
 # description: an example of a distill-style blog post and main elements
-giscus_comments: true
+giscus_comments: false
+permalink: 
 date: 2023-04-22
 toc:
   sidebar: left
@@ -28,14 +29,14 @@ Trajectory data is widely used for many real-world applications, such as trackin
 {{< figure align=center src="assets/img/2023_04_22_LDPTrace/dp_and_ldp.png"  width=70%  caption="DP vs LDP. Image source: [OpenMinded](https://blog.openmined.org/basics-local-differential-privacy-vs-global-differential-privacy/)." >}}
 
 
-In contrast, [local differential privacy (LDP)](https://en.wikipedia.org/wiki/Local_differential_privacy) allows users to directly share a noisy version of their data, provides a more practical setting and improved privacy properties. The only solution that meets the rigorous privacy requirements is <d-cite key="ngram">NGRAM</d-cite>. However, this approach suffers from poor global utility, auxiliary knowledge dependence, high computational overhead, and vulnerability to attacks. Therefore, we offer a new privacy-preserving paradigm to protect users' trajectory data, named LDPTrace, to solve these issues while provides the provable guarantee of LDP. 
+In contrast, [local differential privacy (LDP)](https://en.wikipedia.org/wiki/Local_differential_privacy) allows users to directly share a noisy version of their data, provides a more practical setting and improved privacy properties. The only solution that meets the rigorous privacy requirements is NGRAM<d-cite key="ngram"></d-cite>. However, this approach suffers from poor global utility, auxiliary knowledge dependence, high computational overhead, and vulnerability to attacks. Therefore, we offer a new privacy-preserving paradigm to protect users' trajectory data, named LDPTrace, to solve these issues while provides the provable guarantee of LDP. 
 
 # Our approach
 
 
 ## Overview
 
-Instead of perturbing each trajectory individually, we aim to extract the **key movement patterns** of each user and use them to synthesize privacy-preserving and realistic trajectories. Specifically, LDPTrace approaches trajectory synthesis as a generative process, constructing a probabilistic model based on users’ transition records to estimate the global moving patterns. The key movement patterns are locally extracted from raw trajectory and perturbed/uploaded with <d-cite key="oue">OUE</d-cite> protocol. The overall framework is illustrated as below:
+Instead of perturbing each trajectory individually, we aim to extract the **key movement patterns** of each user and use them to synthesize privacy-preserving and realistic trajectories. Specifically, LDPTrace approaches trajectory synthesis as a generative process, constructing a probabilistic model based on users’ transition records to estimate the global moving patterns. The key movement patterns are locally extracted from raw trajectory and perturbed/uploaded with OUE<d-cite key="oue"></d-cite> protocol. The overall framework is illustrated as below:
 
 
 {{< figure align=center src="assets/img/2023_04_22_LDPTrace/framework.png"  width=70%  caption="The framework of LDPTrace." >}}
@@ -66,7 +67,7 @@ It is worth mentioning that we found the adaptive terminated condition (line 5) 
 
 ## Effectiveness
 
-We conduct extensive experiments on four benchmark trajectory datasets (three of them are released in our [repository](https://github.com/zealscott/LDPTrace)). For utility metrics, we follow <d-cite key="adtrace">AdaTrace</d-cite> and comprehensively evaluate our method with various metrics from global level, trajectory level to semantic level. From fair comparison, we discard the auxiliary temporal and POI information in NGRAM, and only leverage physical distance to ensure the closeness between original and sampled n-grams in geospatial space. The results show that LDPTrace outperform the baseline by a large margin.
+We conduct extensive experiments on four benchmark trajectory datasets (three of them are released in our [repository](https://github.com/zealscott/LDPTrace)). For utility metrics, we follow AdaTrace<d-cite key="adtrace"></d-cite> and comprehensively evaluate our method with various metrics from global level, trajectory level to semantic level. From fair comparison, we discard the auxiliary temporal and POI information in NGRAM, and only leverage physical distance to ensure the closeness between original and sampled n-grams in geospatial space. The results show that LDPTrace outperform the baseline by a large margin.
 
 
 {{< figure align=center src="assets/img/2023_04_22_LDPTrace/utility.png"  width=100%  caption="Utility performance comparison. The best result in each category is shown in bold. For Kendall-tau and FP F1 Similarity, higher values are better. For remaining metrics, lower values are better." >}}
@@ -81,7 +82,7 @@ the average running time of each component, as show in the following figure. We 
 
 ## Attack resilience
 
-We also investigate LDPTrace’s resistance to two common attacks, namely re-identification attack and outlier attack, which are defined in this <d-cite key="adtrace">paper</d-cite>. The results indicate that LDPTrace has impressive ability to resist these two attacks: more than 88% trajectories can be successfully protected in re-identification attack, and all trajectories are hidden from outliers when the privacy parameter changes its value from 2 to 10. On the contrary, NGRAM cannot provide provable protections to these attacks, especially when the demand of protection is more strict. We contribute the superiority of LDPTrace to the synthesis design: since the published trajectories do not resemble any real trajectory, it is much more difficult for attackers to identify traces that they are interested in.
+We also investigate LDPTrace’s resistance to two common attacks, namely re-identification attack and outlier attack, which are defined in this paper<d-cite key="adtrace"></d-cite>. The results indicate that LDPTrace has impressive ability to resist these two attacks: more than 88% trajectories can be successfully protected in re-identification attack, and all trajectories are hidden from outliers when the privacy parameter changes its value from 2 to 10. On the contrary, NGRAM cannot provide provable protections to these attacks, especially when the demand of protection is more strict. We contribute the superiority of LDPTrace to the synthesis design: since the published trajectories do not resemble any real trajectory, it is much more difficult for attackers to identify traces that they are interested in.
 
 {{< figure align=center src="assets/img/2023_04_22_LDPTrace/attack.png"  width=70%  caption="Attack resilience analysis on Oldenburg dataset." >}}
 
