--- a/_posts/2023-04-22-LDPTrace.md
+++ b/_posts/2023-04-22-LDPTrace.md
@@ -3,7 +3,7 @@ layout: distill
 title: Trajectory Synthesis with Local Differential Privacy
 # description: an example of a distill-style blog post and main elements
 giscus_comments: false
-permalink: 
+# permalink: 
 date: 2023-04-22
 toc:
   sidebar: left
@@ -14,7 +14,7 @@ authors:
     affiliations:
       name: Zhejiang University
 
-bibliography: 2023_04_22_LDPTrace.bib
+bibliography: 2023-04-22-LDPTrace.bib
 
 
 ---
