--- a/_posts/2023-04-22-LDPTrace.md
+++ b/_posts/2023-04-22-LDPTrace.md
@@ -26,7 +26,14 @@ This is the gentle introduction to our [work](https://arxiv.org/abs/2302.06180) 
 Trajectory data is widely used for many real-world applications, such as tracking the spread of the disease through people’s movement patterns and providing personalized location-based services based on travel preference. However, privacy concerns and data protection regulations have limited the extent to which this data is shared and utilized. Current [differential privacy (DP)](https://en.wikipedia.org/wiki/Differential_privacy) techniques rely on a *trustworthy aggregator* to collect users' raw trajectories, which still suffer from the risk of data breaches from untrustworthy data curators.
 
 
-{{< figure align=center src="assets/img/2023_04_22_LDPTrace/dp_and_ldp.png"  width=70%  caption="DP vs LDP. Image source: [OpenMinded](https://blog.openmined.org/basics-local-differential-privacy-vs-global-differential-privacy/)." >}}
+<div class="row">
+    <div class="col-sm mt-3 mt-md-0" width=70%>
+        {% include figure.html path="assets/img/2023_04_22_LDPTrace/dp_and_ldp.png" title="DP vs LDP" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+<div class="caption">
+    DP vs LDP. Image source: <a href="https://blog.openmined.org/basics-local-differential-privacy-vs-global-differential-privacy/">OpenMinded</a>.
+</div>
 
 
 In contrast, [local differential privacy (LDP)](https://en.wikipedia.org/wiki/Local_differential_privacy) allows users to directly share a noisy version of their data, provides a more practical setting and improved privacy properties. The only solution that meets the rigorous privacy requirements is NGRAM<d-cite key="ngram"></d-cite>. However, this approach suffers from poor global utility, auxiliary knowledge dependence, high computational overhead, and vulnerability to attacks. Therefore, we offer a new privacy-preserving paradigm to protect users' trajectory data, named LDPTrace, to solve these issues while provides the provable guarantee of LDP. 
@@ -39,7 +46,14 @@ In contrast, [local differential privacy (LDP)](https://en.wikipedia.org/wiki/Lo
 Instead of perturbing each trajectory individually, we aim to extract the **key movement patterns** of each user and use them to synthesize privacy-preserving and realistic trajectories. Specifically, LDPTrace approaches trajectory synthesis as a generative process, constructing a probabilistic model based on users’ transition records to estimate the global moving patterns. The key movement patterns are locally extracted from raw trajectory and perturbed/uploaded with OUE<d-cite key="oue"></d-cite> protocol. The overall framework is illustrated as below:
 
 
-{{< figure align=center src="assets/img/2023_04_22_LDPTrace/framework.png"  width=70%  caption="The framework of LDPTrace." >}}
+<div class="row">
+    <div class="col-sm mt-3 mt-md-0" width=70%>
+        {% include figure.html path="assets/img/2023_04_22_LDPTrace/framework.png" title="Framework" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+<div class="caption">
+    The framework of LDPTrace.
+</div>
 
 
 ## Key movement patterns 
@@ -48,17 +62,27 @@ The probabilistic model consists of three key features:
 
 1. **Intra-Trajectory Mobility**. Transition states are important to capture the movement of spatial data, and we model the mobility with a first-order Markov chain, which means we only care the spatial relationship between adjacent points.
 
-$$\operatorname{Pr}(T[l+1]=C \mid T[1] \ldots T[l])=\operatorname{Pr}(T[l+1]=C \mid T[l])$$
+\begin{equation}
+\operatorname{Pr}(T[l+1]=C \mid T[1] \ldots T[l])=\operatorname{Pr}(T[l+1]=C \mid T[l])
+\end{equation}
 
-2. **Beginning/Terminated Transitions**. Real-world trajectory usually exhibit special start point and end point, which reveal the important spatial semantic of trajectories: pickups, home/work places, destinations, etc. Besides, the start/end points are also useful to guide the random walk during synthesis. Therefore, we add two special cells, namely *virtual* start point and *virtual* end point, which are connected to all the geographic points and are perturbed and uploaded along with the mobility patterns.  
 
-3. **Trajectory Length**. The length distribution of trajectories is also an indispensable character of trajectory synthesis since it indicates the probabilistic travel distance of users’ trace, and serves as the deterministic constraint to terminate the synthesis process. We also use OUE to gather length information from each trajectory and form a discrete distribution on the data curator.
+1. **Beginning/Terminated Transitions**. Real-world trajectory usually exhibit special start point and end point, which reveal the important spatial semantic of trajectories: pickups, home/work places, destinations, etc. Besides, the start/end points are also useful to guide the random walk during synthesis. Therefore, we add two special cells, namely *virtual* start point and *virtual* end point, which are connected to all the geographic points and are perturbed and uploaded along with the mobility patterns.  
+
+2. **Trajectory Length**. The length distribution of trajectories is also an indispensable character of trajectory synthesis since it indicates the probabilistic travel distance of users’ trace, and serves as the deterministic constraint to terminate the synthesis process. We also use OUE to gather length information from each trajectory and form a discrete distribution on the data curator.
 
 ## Trajectory synthesis
 
 After getting the three global spatial features from trajectories, we first combine the intra-trajectory mobility with virtual start/end mobility, and utilize random walk to generate authentic trajectories from them. Here are the main steps of our synthesis algorithm:
 
-{{< figure align=center src="assets/img/2023_04_22_LDPTrace/synthesis.png"  width=60%  caption="Trajectory synthesis from key movement patterns." >}}
+<div class="row">
+    <div class="col-sm mt-3 mt-md-0" width=60%>
+        {% include figure.html path="assets/img/2023_04_22_LDPTrace/synthesis.png" title="Trajectory synthesis" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+<div class="caption">
+    Trajectory synthesis from key movement patterns.
+</div>
 
 
 It is worth mentioning that we found the adaptive terminated condition (line 5) is very helpful to generate faithful trajectories (otherwise it would be too short to show the spatial characters), but it is still an open question that how to integrate the handcraft adaptive mechanism into the feature selection process. 
@@ -70,7 +94,14 @@ It is worth mentioning that we found the adaptive terminated condition (line 5) 
 We conduct extensive experiments on four benchmark trajectory datasets (three of them are released in our [repository](https://github.com/zealscott/LDPTrace)). For utility metrics, we follow AdaTrace<d-cite key="adtrace"></d-cite> and comprehensively evaluate our method with various metrics from global level, trajectory level to semantic level. From fair comparison, we discard the auxiliary temporal and POI information in NGRAM, and only leverage physical distance to ensure the closeness between original and sampled n-grams in geospatial space. The results show that LDPTrace outperform the baseline by a large margin.
 
 
-{{< figure align=center src="assets/img/2023_04_22_LDPTrace/utility.png"  width=100%  caption="Utility performance comparison. The best result in each category is shown in bold. For Kendall-tau and FP F1 Similarity, higher values are better. For remaining metrics, lower values are better." >}}
+<div class="row">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.html path="assets/img/2023_04_22_LDPTrace/utility.png" title="Utility performance comparison" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+<div class="caption">
+    Utility performance comparison. The best result in each category is shown in bold. For Kendall-tau and FP F1 Similarity, higher values are better. For remaining metrics, lower values are better.
+</div>
 
 
 ## Efficiency
@@ -78,14 +109,27 @@ We conduct extensive experiments on four benchmark trajectory datasets (three of
 Efficiency is equally important as utility for real-world deployments, we conduct comprehensive experiments to evaluate
 the average running time of each component, as show in the following figure. We find that LDPTrace is a very efficient privacy-preserving trajectory publication framework, which is more than 300 times faster than NGRAM.
 
-{{< figure align=center src="assets/img/2023_04_22_LDPTrace/efficiency.png"  width=100%  caption="Average runtime in seconds." >}}
+<div class="row">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.html path="assets/img/2023_04_22_LDPTrace/efficiency.png" title="Runtime" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+<div class="caption">
+    Average runtime in seconds.
+</div>
 
 ## Attack resilience
 
 We also investigate LDPTrace’s resistance to two common attacks, namely re-identification attack and outlier attack, which are defined in this paper<d-cite key="adtrace"></d-cite>. The results indicate that LDPTrace has impressive ability to resist these two attacks: more than 88% trajectories can be successfully protected in re-identification attack, and all trajectories are hidden from outliers when the privacy parameter changes its value from 2 to 10. On the contrary, NGRAM cannot provide provable protections to these attacks, especially when the demand of protection is more strict. We contribute the superiority of LDPTrace to the synthesis design: since the published trajectories do not resemble any real trajectory, it is much more difficult for attackers to identify traces that they are interested in.
 
-{{< figure align=center src="assets/img/2023_04_22_LDPTrace/attack.png"  width=70%  caption="Attack resilience analysis on Oldenburg dataset." >}}
-
+<div class="row">
+    <div class="col-sm mt-3 mt-md-0" width=70%>
+        {% include figure.html path="assets/img/2023_04_22_LDPTrace/attack.png" title="Attack" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+<div class="caption">
+    Attack resilience analysis on Oldenburg dataset.
+</div>
 
 
 ## Ablation study
