--- a/_posts/2023-04-22-LDPTrace.md
+++ b/_posts/2023-04-22-LDPTrace.md
@@ -26,9 +26,9 @@ This is the gentle introduction to our [work](https://arxiv.org/abs/2302.06180) 
 Trajectory data is widely used for many real-world applications, such as tracking the spread of the disease through people’s movement patterns and providing personalized location-based services based on travel preference. However, privacy concerns and data protection regulations have limited the extent to which this data is shared and utilized. Current [differential privacy (DP)](https://en.wikipedia.org/wiki/Differential_privacy) techniques rely on a *trustworthy aggregator* to collect users' raw trajectories, which still suffer from the risk of data breaches from untrustworthy data curators.
 
 
-<div class="row">
-    <div class="col-sm mt-3 mt-md-0" width=70%>
-        {% include figure.html path="assets/img/2023_04_22_LDPTrace/dp_and_ldp.png" title="DP vs LDP" class="img-fluid rounded z-depth-1" %}
+<div class="row justify-content-md-center">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.html path="assets/img/2023_04_22_LDPTrace/dp_and_ldp.png" title="DP vs LDP" class="img-fluid rounded z-depth-1" width="70%" %}
     </div>
 </div>
 <div class="caption">
@@ -46,9 +46,9 @@ In contrast, [local differential privacy (LDP)](https://en.wikipedia.org/wiki/Lo
 Instead of perturbing each trajectory individually, we aim to extract the **key movement patterns** of each user and use them to synthesize privacy-preserving and realistic trajectories. Specifically, LDPTrace approaches trajectory synthesis as a generative process, constructing a probabilistic model based on users’ transition records to estimate the global moving patterns. The key movement patterns are locally extracted from raw trajectory and perturbed/uploaded with OUE<d-cite key="oue"></d-cite> protocol. The overall framework is illustrated as below:
 
 
-<div class="row">
-    <div class="col-sm mt-3 mt-md-0" width=70%>
-        {% include figure.html path="assets/img/2023_04_22_LDPTrace/framework.png" title="Framework" class="img-fluid rounded z-depth-1" %}
+<div class="row justify-content-md-center">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.html path="assets/img/2023_04_22_LDPTrace/framework.png" title="Framework" class="img-fluid rounded z-depth-1" width="70%" %}
     </div>
 </div>
 <div class="caption">
@@ -75,9 +75,9 @@ The probabilistic model consists of three key features:
 
 After getting the three global spatial features from trajectories, we first combine the intra-trajectory mobility with virtual start/end mobility, and utilize random walk to generate authentic trajectories from them. Here are the main steps of our synthesis algorithm:
 
-<div class="row">
-    <div class="col-sm mt-3 mt-md-0" width=60%>
-        {% include figure.html path="assets/img/2023_04_22_LDPTrace/synthesis.png" title="Trajectory synthesis" class="img-fluid rounded z-depth-1" %}
+<div class="row justify-content-md-center">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.html path="assets/img/2023_04_22_LDPTrace/synthesis.png" title="Trajectory synthesis" class="img-fluid rounded z-depth-1" width="60%" %}
     </div>
 </div>
 <div class="caption">
@@ -94,7 +94,7 @@ It is worth mentioning that we found the adaptive terminated condition (line 5) 
 We conduct extensive experiments on four benchmark trajectory datasets (three of them are released in our [repository](https://github.com/zealscott/LDPTrace)). For utility metrics, we follow AdaTrace<d-cite key="adtrace"></d-cite> and comprehensively evaluate our method with various metrics from global level, trajectory level to semantic level. From fair comparison, we discard the auxiliary temporal and POI information in NGRAM, and only leverage physical distance to ensure the closeness between original and sampled n-grams in geospatial space. The results show that LDPTrace outperform the baseline by a large margin.
 
 
-<div class="row">
+<div class="row justify-content-md-center">
     <div class="col-sm mt-3 mt-md-0">
         {% include figure.html path="assets/img/2023_04_22_LDPTrace/utility.png" title="Utility performance comparison" class="img-fluid rounded z-depth-1" %}
     </div>
@@ -109,7 +109,7 @@ We conduct extensive experiments on four benchmark trajectory datasets (three of
 Efficiency is equally important as utility for real-world deployments, we conduct comprehensive experiments to evaluate
 the average running time of each component, as show in the following figure. We find that LDPTrace is a very efficient privacy-preserving trajectory publication framework, which is more than 300 times faster than NGRAM.
 
-<div class="row">
+<div class="row justify-content-md-center">
     <div class="col-sm mt-3 mt-md-0">
         {% include figure.html path="assets/img/2023_04_22_LDPTrace/efficiency.png" title="Runtime" class="img-fluid rounded z-depth-1" %}
     </div>
@@ -122,9 +122,9 @@ the average running time of each component, as show in the following figure. We 
 
 We also investigate LDPTrace’s resistance to two common attacks, namely re-identification attack and outlier attack, which are defined in this paper<d-cite key="adtrace"></d-cite>. The results indicate that LDPTrace has impressive ability to resist these two attacks: more than 88% trajectories can be successfully protected in re-identification attack, and all trajectories are hidden from outliers when the privacy parameter changes its value from 2 to 10. On the contrary, NGRAM cannot provide provable protections to these attacks, especially when the demand of protection is more strict. We contribute the superiority of LDPTrace to the synthesis design: since the published trajectories do not resemble any real trajectory, it is much more difficult for attackers to identify traces that they are interested in.
 
-<div class="row">
-    <div class="col-sm mt-3 mt-md-0" width=70%>
-        {% include figure.html path="assets/img/2023_04_22_LDPTrace/attack.png" title="Attack" class="img-fluid rounded z-depth-1" %}
+<div class="row justify-content-md-center">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.html path="assets/img/2023_04_22_LDPTrace/attack.png" title="Attack" class="img-fluid rounded z-depth-1" width="70%" %}
     </div>
 </div>
 <div class="caption">
