--- a/_posts/2023-04-22-LDPTrace.md
+++ b/_posts/2023-04-22-LDPTrace.md
@@ -27,7 +27,7 @@ Trajectory data is widely used for many real-world applications, such as trackin
 
 
 <div class="row justify-content-md-center">
-    <div class="col-sm mt-3 mt-md-0">
+    <div class="col-sm mt-0 pb-0 mt-md-0">
         {% include figure.html path="assets/img/2023_04_22_LDPTrace/dp_and_ldp.png" title="DP vs LDP" class="img-fluid rounded z-depth-1" width="70%" %}
     </div>
 </div>
@@ -47,7 +47,7 @@ Instead of perturbing each trajectory individually, we aim to extract the **key 
 
 
 <div class="row justify-content-md-center">
-    <div class="col-sm mt-3 mt-md-0">
+    <div class="col-sm mt-0 pb-0 mt-md-0">
         {% include figure.html path="assets/img/2023_04_22_LDPTrace/framework.png" title="Framework" class="img-fluid rounded z-depth-1" width="70%" %}
     </div>
 </div>
@@ -76,7 +76,7 @@ The probabilistic model consists of three key features:
 After getting the three global spatial features from trajectories, we first combine the intra-trajectory mobility with virtual start/end mobility, and utilize random walk to generate authentic trajectories from them. Here are the main steps of our synthesis algorithm:
 
 <div class="row justify-content-md-center">
-    <div class="col-sm mt-3 mt-md-0">
+    <div class="col-sm mt-0 pb-0 mt-md-0">
         {% include figure.html path="assets/img/2023_04_22_LDPTrace/synthesis.png" title="Trajectory synthesis" class="img-fluid rounded z-depth-1" width="60%" %}
     </div>
 </div>
@@ -95,7 +95,7 @@ We conduct extensive experiments on four benchmark trajectory datasets (three of
 
 
 <div class="row justify-content-md-center">
-    <div class="col-sm mt-3 mt-md-0">
+    <div class="col-sm mt-0 pb-0 mt-md-0">
         {% include figure.html path="assets/img/2023_04_22_LDPTrace/utility.png" title="Utility performance comparison" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
@@ -110,7 +110,7 @@ Efficiency is equally important as utility for real-world deployments, we conduc
 the average running time of each component, as show in the following figure. We find that LDPTrace is a very efficient privacy-preserving trajectory publication framework, which is more than 300 times faster than NGRAM.
 
 <div class="row justify-content-md-center">
-    <div class="col-sm mt-3 mt-md-0">
+    <div class="col-sm mt-0 pb-0 mt-md-0">
         {% include figure.html path="assets/img/2023_04_22_LDPTrace/efficiency.png" title="Runtime" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
@@ -123,7 +123,7 @@ the average running time of each component, as show in the following figure. We 
 We also investigate LDPTrace’s resistance to two common attacks, namely re-identification attack and outlier attack, which are defined in this paper<d-cite key="adtrace"></d-cite>. The results indicate that LDPTrace has impressive ability to resist these two attacks: more than 88% trajectories can be successfully protected in re-identification attack, and all trajectories are hidden from outliers when the privacy parameter changes its value from 2 to 10. On the contrary, NGRAM cannot provide provable protections to these attacks, especially when the demand of protection is more strict. We contribute the superiority of LDPTrace to the synthesis design: since the published trajectories do not resemble any real trajectory, it is much more difficult for attackers to identify traces that they are interested in.
 
 <div class="row justify-content-md-center">
-    <div class="col-sm mt-3 mt-md-0">
+    <div class="col-sm mt-0 pb-0 mt-md-0">
         {% include figure.html path="assets/img/2023_04_22_LDPTrace/attack.png" title="Attack" class="img-fluid rounded z-depth-1" width="70%" %}
     </div>
 </div>
