--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,7 +39,7 @@
                   Lu Chen and
                   Baihua Zheng and
                   Yunjun Gao},
-  title        = {{LDPTrace:}: Locally Differentially Private Trajectory Synthesis},
+  title        = {{LDPTrace:} Locally Differentially Private Trajectory Synthesis},
   journal      = {Proc. {VLDB} Endow.},
   volume       = {16},
   number       = {8},
